--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
                   успех!</a>
                <nav class="menu__body">
                   <ul class="menu__list">
-                     <li class="menu__item menu__item1 page-current page-current-home"><a href="index.html"
-                           class="menu__link">Главная</a>
+                     <li class="menu__item"><a href="index.html"
+                           class="menu__link menu__item1 page-current page-current-home">Главная</a>
                      </li>
                      <li class="menu__item menu__item2 page-current-music"><a href="music.html"
                            class="menu__link">Аудио</a>
