--- a/music.html
+++ b/music.html
@@ -22,8 +22,8 @@
                      <li class="menu__item menu__item1 page-current-home"><a href="index.html"
                            class="menu__link">Главная</a>
                      </li>
-                     <li class="menu__item menu__item2 page-current page-current-music"><a href="music.html"
-                           class="menu__link">Аудио</a>
+                     <li class="menu__item menu__item2"><a href="music.html"
+                           class="menu__link page-current page-current-music">Аудио</a>
                      </li>
                      <li class="menu__item menu__item3 page-current-video"><a href="video.html"
                            class="menu__link">Видео</a></li>
