--- a/video.html
+++ b/video.html
@@ -25,8 +25,8 @@
                      <li class="menu__item menu__item2 page-current-music"><a href="music.html"
                            class="menu__link">Аудио</a>
                      </li>
-                     <li class="menu__item menu__item3 page-current page-current-video"><a href="video.html"
-                           class="menu__link">Видео</a>
+                     <li class="menu__item "><a href="video.html"
+                           class="menu__link menu__item3 page-current page-current-video">Видео</a>
                      </li>
                   </ul>
                </nav>
