--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
                      <li class="menu__item"><a href="index.html"
                            class="menu__link menu__item1 page-current page-current-home">Главная</a>
                      </li>
-                     <li class="menu__item menu__item2 page-current-music"><a href="music.html"
-                           class="menu__link">Аудио</a>
+                     <li class="menu__item"><a href="music.html"
+                           class="menu__link menu__item2 page-current-music">Аудио</a>
                      </li>
-                     <li class="menu__item menu__item3 page-current-video"><a href="video.html"
-                           class="menu__link">Видео</a></li>
+                     <li class="menu__item"><a href="video.html"
+                           class="menu__link menu__item3 page-current-video">Видео</a></li>
                   </ul>
                </nav>
                <button type="button" class="menu__icon icon-menu"><span></span></button>
