--- a/music.html
+++ b/music.html
@@ -19,14 +19,14 @@
                   сила!</a>
                <nav class="menu__body">
                   <ul class="menu__list">
-                     <li class="menu__item menu__item1 page-current-home"><a href="index.html"
-                           class="menu__link">Главная</a>
+                     <li class="menu__item"><a href="index.html"
+                           class="menu__link  menu__item1 page-current-home">Главная</a>
                      </li>
-                     <li class="menu__item menu__item2"><a href="music.html"
-                           class="menu__link page-current page-current-music">Аудио</a>
+                     <li class="menu__item"><a href="music.html"
+                           class="menu__link menu__item2 page-current page-current-music">Аудио</a>
                      </li>
-                     <li class="menu__item menu__item3 page-current-video"><a href="video.html"
-                           class="menu__link">Видео</a></li>
+                     <li class="menu__item"><a href="video.html"
+                           class="menu__link menu__item3 page-current-video">Видео</a></li>
                   </ul>
                </nav>
                <button type="button" class="menu__icon icon-menu"><span></span></button>
