--- a/video.html
+++ b/video.html
@@ -19,13 +19,13 @@
                   стимул!</a>
                <nav class="menu__body">
                   <ul class="menu__list">
-                     <li class="menu__item menu__item1 page-current-home"><a href="index.html"
-                           class="menu__link">Главная</a>
+                     <li class="menu__item"><a href="index.html"
+                           class="menu__link menu__item1 page-current-home">Главная</a>
                      </li>
-                     <li class="menu__item menu__item2 page-current-music"><a href="music.html"
-                           class="menu__link">Аудио</a>
+                     <li class="menu__item"><a href="music.html"
+                           class="menu__link menu__item2 page-current-music">Аудио</a>
                      </li>
-                     <li class="menu__item "><a href="video.html"
+                     <li class="menu__item"><a href="video.html"
                            class="menu__link menu__item3 page-current page-current-video">Видео</a>
                      </li>
                   </ul>
